# libutil

./: Makefile  meson.build
include/: util.h
src/: util.c  util.h  util_common.c  util_core.c
